# STS1_EDU_Scheduler

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  Makefile  Readme.md  config.toml  main.py  notes.md  scheduler.service
.github/: contributing.md
.github/workflows/: cross.yml  formatting.yml  rust.yml  rust_tests.yml
archives/: .gitkeep
command/: core.py
data/: .gitkeep
docs/: communication.json
examples/: cli.rs
filevec/src/: lib.rs
lib/filevec/: Cargo.toml
lib/filevec/src/: lib.rs
scheduler/: Cargo.toml
scheduler/docs/: protocol.py
scheduler/examples/: cli.rs
scheduler/src/: lib.rs  main.rs
scheduler/src/command/: common.rs  error.rs  execute_program.rs  execution_context.rs  get_status.rs  return_result.rs  store_archive.rs  update_time.rs
scheduler/src/communication/: mod.rs  socket.rs
scheduler/tests/: tests.rs
scheduler/tests/simulation/: command_execution.rs  full_run.rs  logging.rs  mod.rs  timeout.rs
scheduler/tests/software_tests/: command_integration.rs  common.rs  execute_program.rs  get_status.rs  return_result.rs  stop_program.rs  store_archive.rs
scheduler/tests/test_data/module0/: __init__.py
simple-archive/: Cargo.toml
simple-archive/src/: lib.rs
src/: command.rs  communication.rs  lib.rs  main.rs  uart.rs
src/command/: common.rs  error.rs  execute_program.rs  execution_context.rs  get_status.rs  handlers.rs  mod.rs  return_result.rs  stop_program.rs  store_archive.rs  update_time.rs
src/communication/: cep.rs  communication.rs  csbi.rs  mod.rs  socket.rs  uart.rs
src/persist/: implementations.rs  mod.rs
tests/: basic.py  command_integration.rs  command_tests.py  command_tests.rs  common.rs  communication_tests.rs  execute_program.pack  raspberry_tests.rs  store_archive.pack  testing_ground.rs  tests.rs  uart_sim.rs
tests/hw_integration/: AD_UART.py  main.py
tests/integration_tests/: framework.py  test.py  testcases.py
tests/simulation/: command_execution.rs  full_run.rs  logging.rs  mod.rs  socket.rs  timeout.rs
tests/software_tests/: command_integration.rs  common.rs  communication_tests.rs  execute_program.rs  get_status.rs  mod.rs  raspberry_tests.rs  return_result.rs  simulation.rs  stop_program.rs  store_archive.rs
tests/test_data/: main.py
tests/test_data/communication/: core.py
