[package]
name = "STS1_EDU_Scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "*"
simplelog = "^0.12.0"
subprocess = "0.2.8"
crc = "3.0.0"
toml = "0.8.8"
rppal = "0.16.0"
serde = { version = "1.0.166", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
serialport = "4.2.2"
test-case = "3.3.1"

[dependencies.filevec]
path = "lib/filevec"

[features]
mock = []
rpi = []

[dev-dependencies]
file-per-thread-logger = "*"
zip = "0.6.6"
