[package]
name = "STS1_EDU_Scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "*"
simplelog = "^0.12.0"
subprocess = "0.2.8"
crc = "3.0.0"
toml = "0.8.8"
rppal = "0.16.0"
serde = { version = "1.0.166", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
serialport = "4.2.2"
test-case = "3.3.1"
tar = "0.4.40"
thiserror = "1.0.62"

[dependencies.filevec]
path = "lib/filevec"

[features]
mock = []
rpi = []

[dev-dependencies]
file-per-thread-logger = "*"
inquire = "0.7.5"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
