[package]
name = "STS1_EDU_Scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
crc = "3.2.1"
filevec = { path = "../filevec" }
log = "0.4.22"
rppal = "0.18.0"
serde = { version = "1.0.204", features = ["derive"] }
serialport = "4.4.0"
simple-archive = { path = "../simple-archive" }
simplelog = "0.12.2"
strum = { version = "0.26.3", features = ["derive"] }
subprocess = "0.2.9"
thiserror = "1.0.63"
toml = "0.8.19"

[features]
mock = []
rpi = []

[dev-dependencies]
test-case = "3.3.1"
file-per-thread-logger = "0.2.0"
inquire = "0.7.5"

[lints]
workspace = true
